--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
 	"require": {
 		"laravel/framework": "4.2.*"
 	},
+	"require-dev": {
+		"phpunit/phpunit": "4.1.*"
+	},
 	"autoload": {
 		"classmap": [
 			"app/commands",
