--- a/new/ticket-management-system-master/composer.json
+++ b/new/ticket-management-system-master/composer.json
@@ -16,9 +16,7 @@
 			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
-			"app/tests/TestCase.php", 
-			"app/libraries/HelperFunc"
-			
+			"app/tests/TestCase.php"
 		]
 	},
 	"scripts": {
