working on all types of permission

--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,8 @@
 			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
-			"app/tests/TestCase.php", 
-			"app/libraries/HelperFunc"
-			
+			"app/tests/TestCase.php",
+			"app/libraries/HelperFunc.php"
 		]
 	},
 	"scripts": {
